# hunter2

./: .coveragerc  .dockerignore  .editorconfig  .eslintrc.cjs  .gitattributes  .gitignore  .gitlab-ci.yml  .jshintrc  .releaserc.yml  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.pycharm.yaml  docker-compose.pycharm.yml  docker-compose.test.yml  docker-compose.tools.yml  h2tools.sh  package.json  poetry.toml  pyproject.toml  pytest.ini  renovate.json  uwsgi.ini  webpack.common.js  webpack.dev.js
accounts/: admin.py  factories.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0004_auto_20190116_0914.py  0006_auto_20211115_2034.py  0007_alter_user_managers.py  0007_auto_20211118_0924.py  0008_delete_userinfo.py  0009_merge_0007_alter_user_managers_0008_delete_userinfo.py
accounts/scss/: providers.scss
docs/: conf.py  docker-build-docs.sh  index.rst
docs/_extensions/: sourcelink.py
docs/development/: getting_started.md
docs/reference/: glossary.md
docs/usage/: configuration.md  customisation.md  first_hunt.md  hunt_management.md  installation.md  tasks.md  upgrading.md
events/: admin.py  context_processors.py  factories.py  fixtures.py  middleware.py  models.py  test.py  tests.py  utils.py
events/migrations/: 0011_auto_20210515_2122.py  0012_auto_20210926_2239.py  0012_auto_20211118_0943.py  0012_event_index_text.py  0013_merge_0012_auto_20211118_0943_0012_event_index_text.py  0014_merge_20220315_2314.py
hunter2/: asgi.py  context_processors.py  factories.py  forms.py  middleware.py  mixins.py  models.py  privacy.py  public_urls.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
hunter2/integration/: tests.py
hunter2/js/: alert-list.html  alert-list.js  alert-list.vue  axios.js  base.js  index.js
hunter2/migrations/: 0006_auto_20210425_2215.py  0007_remove_configuration_index_content.py  0008_auto_20220321_2213.py
hunter2/scss/: base.scss
hunter2/templates/: base.html
hunts/: admin.py  apps.py  consumers.py  context_processors.py  factories.py  forms.py  mixins.py  models.py  permissions.py  routing.py  rules.py  signals.py  tests.py  urls.py  utils.py  views.py
hunts/fixtures/: base.yaml  external.yaml  test.yaml
hunts/js/: admin-guess-list.js  clue-list.html  clue-list.js  clue-list.scss  clue-list.vue  event.js  human-datetime.html  human-datetime.js  human-duration.html  human-duration.js  puzzle.js  puzzleWebsocketHandlers.js  team-admin.html  team-admin.js  team-admin.scss  team-admin.vue
hunts/migrations/: 0001_squashed_0017_auto_20190209_1436.py  0008_auto_20210425_1632.py  0008_auto_20210702_1258.py  0009_remove_teampuzzledata_start_time.py  0010_merge_20210706_2134.py  0011_auto_20210723_0003.py  0012_auto_20210825_2149.py  0013_auto_20210916_2313.py  0014_auto_20210924_1123.py  0015_linear_episode_start_dates.py  0016_remove_announcement_event.py  0017_alter_headstart_options.py  0017_auto_20190217_1408.py  0018_auto_20220127_2354.py  0019_auto_20220127_2354.py  0020_auto_20220127_2354.py  0021_announcement_notify.py  0022_auto_20220417_2037.py  0023_auto_20220919_1847.py  0024_auto_20221002_2318.py  0025_episode_no_stats.py  0025_hint_obsoleted_by.py  0025_unlock_order.py  0026_auto_20170704_2150.py  0026_merge_0025_episode_no_stats_0025_hint_obsoleted_by.py
hunts/runtimes/: __init__.py  automation.py  external.py  iframe.py  regex.py  static.py  (+2 more)
locust/: auth.py  locustfile.py
nginx/: Dockerfile  default.conf
postgres/: Dockerfile
prometheus/: Dockerfile  prometheus.yml
requirements/: development.frozen.txt  production.frozen.txt  production.txt
teams/: admin.py  apps.py  consumers.py  context_processors.py  factories.py  forms.py  middleware.py  mixins.py  models.py  permissions.py  signals.py  tests.py  urls.py  views.py
webpack/: Dockerfile  package.json
(+110 files in other folders)
